--- a/Endpoint.MVC/Endpoint.MVC.csproj
+++ b/Endpoint.MVC/Endpoint.MVC.csproj
@@ -11,6 +11,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\BusinessLogic\BusinessLogic.csproj" />
     <ProjectReference Include="..\Repository\Repository.csproj" />
   </ItemGroup>
 
